# otterflow

./: .env.example  .gitignore  LEARN.md  README.md  pyproject.toml  setup_otterflow.sh
.github/workflows/: ci.yml  publish.yml
examples/: quickstart.py
otterflow/: __init__.py  agent.py  memory.py  tools.py
otterflow/agents/: __init__.py
tests/: test_otterflow.py
